--- a/css/style.css
+++ b/css/style.css
@@ -614,6 +614,21 @@ p {
     -webkit-border-radius: 10px 10px 0px 0px;
     border-radius: 10px 10px 0px 0px;
 }
+
+.price-column h4 {
+    background-color:#181A1C;
+    text-transform:uppercase;
+    text-align: center;
+    color:#FECE1A;
+    padding:34px 0px;
+    font-size: 36px;
+    margin-top:0px;
+    -moz-border-radius: 0px;
+    -webkit-border-radius: 10px 10px 0px 0px;
+    border-radius: 10px 10px 0px 0px;
+    line-height: 30px;
+}
+
 .price-column .list{
     list-style:none;
     margin:20px 50px;
